<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="text_caption">Caption</string>
    <string name="text_save">Save</string>
    <string name="text_snap">Snap</string>
    <string name="text_previous">Previous</string>
    <string name="text_next">Next</string>
    <string name="text_filter">Filter</string>
    <string name="text_timeStamp">Time Stamp</string>
    <string name="button_settings">Settings</string>
    <string name="text_fromDate">Date From</string>
    <string name="text_toDate">Date To</string>
    <string name="string_search">Search</string>
    <string name="string_filter">Filter</string>
    <string name="string_reset">Reset</string>
    <string name="string_latitude">Latitude</string>
    <string name="string_longitude">Longitude</string>
    <string name="string_filterByCaption">Filter By Caption</string>
    <string name="string_filterByDate">Filter By Date</string>
    <string name="string_filterByLocation">Filter By Location</string>
    <string name="string_dateFormat">yyyyMMdd</string>
    <string name="string_date">Date</string>
    <string name="string_index">Index</string>
    <string name="string_dateTimeFormat">yyyyMMddHHmmss</string>
    <string name="string_dateTimeFormatOptions">yyyyMMdd(HHmmss)</string>
    <string name="string_dateTime">DateTime</string>>
</resources>
